--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "typescript": "^3.4.3"
   },
   "scripts": {
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build:analyze": "npm run build && npm run analyze",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -27,5 +29,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "source-map-explorer": "^1.8.0"
+  }
 }
