--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "prettier": "^1.17.0",
     "source-map-explorer": "^1.8.0",
     "tslint": "^5.16.0",
+    "tslint-config-airbnb": "^5.11.1",
     "tslint-config-prettier": "^1.18.0",
     "tslint-plugin-prettier": "^2.0.1",
     "tslint-react": "^4.0.0"
